# treemapper

./: .dockerignore  .flake8  .gitignore  .gitleaks.toml  .gitleaksignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  .treemapperignore  ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORRECTNESS.md  Dockerfile.bench  Dockerfile.bench-data  LEVERAGE.md  PAINPOINTS.md  PAPER_DEVIATIONS.md  PRODUCT.md  QA.md  README.md  REVIEW_TESTS.md  SECURITY.md  failing_tests.yaml  pyproject.toml  requirements-bench.txt  requirements.txt  setup.cfg  sonar-project.properties  treemapper.spec  whitelist_vulture.py
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: automerge.yml  bench-cleanup.yml  bench-data-image.yml  bench-image.yml  bench-sweep.yml  benchmark.yml  cd.yml  ci.yml  sensitivity-check.yml
.treemapper/: diffctx.whitelist  ignore  rca-diffctx-failures.whitelist  review-cicd.whitelist  review-core.whitelist  review-diffctx.whitelist  review-edges.whitelist  review-parsers.whitelist  review-ux.whitelist
benchmarks/: README.md  STATS_PLAN.md  __main__.py  aggregate_seeds.py  aggregate_sweep.py  backfill_checkpoints.py  budget_curve.py  build_splits.py  calibrate.py  cell_metrics.py  common.py  compare_runs.py  contextbench_diffctx.py  dataset_describe.py  dataset_revisions.json  diffctx_eval_fn.py  forensic_contextbench.py  loo_swebench.py  pin_revisions.py  render_comparison.py  run_all.py  run_eval.py  run_final_eval.py  run_local_max.py  select_final.py  stats.py  stratified_analysis.py  summarize_results.py
benchmarks/adapters/: __init__.py  base.py  calibrate.py  contamination.py  contextbench.py  dataset_pins.py  evaluator.py  final_eval.py  multi_swebench.py  polybench.py  runner.py  runtime_probe.py  splits.py  swebench.py
benchmarks/baselines/: __init__.py  _idents.py  aider_baseline.py  aider_subprocess.py  bm25_baseline.py
benchmarks/manifests/v1/: SPLIT_REPORT.md  calibration.txt  test_contextbench_verified.txt  test_polybench500.txt  test_swebench_verified.txt  (+1 more)
benchmarks/metrics/: def_coverage.py
diffctx/: Cargo.toml  pyproject.toml
diffctx/python/_diffctx/: __init__.py
diffctx/src/: analytics.rs  candidate_files.rs  core.rs  discovery.rs  filtering.rs  fragmentation.rs  git.rs  graph.rs  graph_export.rs  interval.rs  languages.rs  lib.rs  main.rs  memory_pipeline.rs  mode.rs  pipeline.rs  postpass.rs  ppr.rs  project_graph.rs  pybridge.rs  render.rs  scoring.rs  select.rs  signatures.rs  stopwords.rs  test_harness.rs  tokenizer.rs  types.rs  universe.rs
diffctx/src/config/: analytics.rs  bm25.rs  budget.rs  category_weights.rs  edge_weights.rs  env_overrides.rs  extensions.rs  filtering.rs  fragmentation.rs  git.rs  graph_filtering.rs  importance.rs  limits.rs  mod.rs  mode.rs  needs.rs  parsers.rs  render.rs  scoring.rs  selection.rs  tokenization.rs  weights.rs
diffctx/src/edges/: base.rs  mod.rs
diffctx/src/edges/config_edges/: build_system.rs  cicd.rs  docker.rs  generic.rs  helm.rs  kubernetes.rs  mod.rs  terraform.rs
diffctx/src/edges/document/: mod.rs
diffctx/src/edges/history/: cochange.rs  mod.rs
diffctx/src/edges/semantic/: ansible.rs  bazel.rs  c_family.rs  cargo_edges.rs  clojure.rs  css.rs  dart.rs  dbt.rs  dotnet.rs  elixir.rs  erlang.rs  go.rs  graphql.rs  haskell.rs  javascript.rs  julia.rs  jvm.rs  latex.rs  lua.rs  mod.rs  nim.rs  nix.rs  ocaml.rs  openapi.rs  perl.rs  php.rs  prisma.rs  protobuf.rs  python.rs  r_lang.rs  ruby.rs  rust_lang.rs  shell.rs  sql.rs  swift.rs  tags.rs  terraform.rs  zig.rs
diffctx/src/edges/similarity/: lexical.rs  mod.rs
diffctx/src/edges/structural/: containment.rs  mod.rs  sibling.rs  testing.rs
diffctx/src/parsers/: config_parser.rs  generic.rs  markdown.rs  mod.rs  tree_sitter_strategy.rs
diffctx/src/utility/: boltzmann.rs  importance.rs  mod.rs  needs.rs  scoring.rs
diffctx/tests/: yaml_cases.rs
diffctx/tests/common/: mod.rs
diffctx/tests/fixtures/garbage/: garbage_api.py  garbage_constants.py  garbage_handlers.py  garbage_models.py  garbage_module.js  garbage_services.py  garbage_types.py  garbage_unrelated.yaml  garbage_utils.py  garbage_validators.py
docs/: Clipboard Copy.md  Fragmentation.md  Token Counting.md  parameter-strategy.md
docs/Context-Selection-for-Git-Diff/: Fragmentation.md  draft.md  main.bbl  main.tex  references.bib  tests.md
scripts/: aggregate_sweep_report.py  bake_bench_cache.py  build_bench_image.sh  migrate_tests_to_yaml.py  migrate_to_v3.py  run_bench_docker.sh  run_sweep.sh  sensitivity_check.py  sensitivity_check.sh  sweep_orchestrator.sh  update_readme_usage.py
src/diffctx/: __init__.py  __main__.py  cli.py  ignore.py  logger.py  main.py  tokens.py  writer.py
src/treemapper/: __init__.py  __main__.py  cli.py  clipboard.py  ignore.py  languages.py  logger.py  mcp_main.py  tokens.py  tree.py  treemapper.py  version.py  writer.py
tests/: conftest.py  garbage_data.py  scoring.py  test_anchored_patterns.py  test_api.py  test_basic.py  test_benchmark_adapters.py  test_benchmark_runner.py  test_benchmark_splits.py  test_cli.py  test_clipboard.py  test_complete_coverage.py  test_coverage_gaps.py  test_default_ignores.py  test_diff_algorithm.py  test_diff_backward_deps.py  test_diff_cicd_and_docs.py  test_diff_comprehensive.py  test_diff_config.py  test_diff_config_context.py  test_diff_context.py  test_diff_context_comprehensive.py  test_diff_cpp.py  test_diff_cross_cutting.py  test_diff_csharp.py  test_diff_dependencies.py  test_diff_docker.py  test_diff_edge_cases.py  test_diff_forward_deps.py  test_diff_fragments_regression.py  test_diff_frontend.py  test_diff_full_mode.py  test_diff_git_ops.py  test_diff_go.py  test_diff_graph_regression.py  test_diff_helm.py  test_diff_ignore_rules.py  test_diff_infrastructure_validation.py  test_diff_java.py  test_diff_javascript.py  (+48 more)
tests/framework/: __init__.py  conftest_plugin.py  loader.py  pygit2_backend.py  runner.py  scoring.py  types.py
(+9126 files in other folders)
