[package]
name = "diffctx"
version = "0.1.0"
edition = "2024"

[lib]
name = "_diffctx"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "diffctx"
path = "src/main.rs"

[[bin]]
name = "diffctx-test"
path = "src/test_harness.rs"

[features]
default = []
python = ["pyo3"]

[dependencies]
clap = { version = "4", features = ["derive"] }
gix = { version = "0.72", default-features = false, features = ["blocking-network-client"] }
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-scala = "0.23"
tree-sitter-swift = "0.6"
tree-sitter-html = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-css = "0.25"
tree-sitter-json = "0.24"
tree-sitter-haskell = "0.23"
tree-sitter-julia = "0.23"
tree-sitter-ocaml = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-r = "1.2"
tree-sitter-elixir = "0.3"
tree-sitter-lua = "0.5"
tree-sitter-zig = "1.1"
tree-sitter-erlang = "0.16"
tree-sitter-nix = "0.3"
tree-sitter-groovy = "0.1"
tree-sitter-objc = "3.0"
tree-sitter-cmake = "0.7"
tree-sitter-make = "1.1"
tree-sitter-hcl = "1.1"
tree-sitter-clojure = "0.1"
tree-sitter-graphql = "0.1"
# tree-sitter-latex = "0.1" # broken: missing external scanner symbols
tree-sitter-dart = "0.1"
tree-sitter-prisma-io = "1.6"
tree-sitter-svelte-ng = "1.0"
tiktoken-rs = "=0.6.0"
rayon = "1.10"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
once_cell = "1"
rustc-hash = "2"
similar = "2"
glob = "0.3"
smallvec = "1"
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

[dev-dependencies]
tempfile = "3"
serde_yaml = "0.9"
walkdir = "2"
libtest-mimic = "0.7"

[[test]]
name = "yaml_cases"
harness = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
redundant_closure_for_method_calls = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
items_after_statements = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
non_std_lazy_statics = "allow"
implicit_hasher = "allow"
manual_let_else = "allow"
missing_const_for_fn = "allow"
option_if_let_else = "allow"
unnested_or_patterns = "allow"
unused_self = "allow"
cargo_common_metadata = "allow"
type_complexity = "allow"
should_implement_trait = "allow"
multiple_crate_versions = "allow"
single_match_else = "allow"
new_without_default = "allow"

[lints.rust]
unsafe_code = "deny"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
