[build-system]
build-backend = "maturin"
requires = [ "maturin>=1,<2" ]

[project]
name = "diffctx"
version = "0.1.0"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[tool.maturin]
features = [ "python" ]
python-source = "python"
module-name = "_diffctx"
